fixing small alignment issues in postcard and dashboard page

--- a/frontend/src/styles/ui.module.css
+++ b/frontend/src/styles/ui.module.css
@@ -94,6 +94,10 @@
   gap: 2rem;
 }
 
+.componentError button {
+  width: auto;
+}
+
 .miniErrorWrapper {
   display: flex;
   flex-direction: column;
